Fix vertical alignment of filename, and adjust respunsive grid

--- a/substanced/folder/static/css/multiupload.css
+++ b/substanced/folder/static/css/multiupload.css
@@ -59,6 +59,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    line-height: 65px;
 }
 
 .file-in-progress .canvas-wrapper {
